Fix vertial alignment

--- a/stylesheets/contactStyle.css
+++ b/stylesheets/contactStyle.css
@@ -18,6 +18,7 @@ body {
 
 .bio {
   display: inline-block;
+  vertical-align: top;
 }
 
 #bio-img {
